--- a/style.css
+++ b/style.css
@@ -155,3 +155,53 @@ body {
   margin: 1.5em 0;
   color: var(--cinza-secundario);
 }
+
+@media screen and (max-width: 768px) {
+  .container {
+    display: block;
+    background-image: none;
+    height: 60vh;
+  }
+  
+  .container__box {
+    margin: 2em;
+  }
+
+  .container__img {
+    width: 50vw; 
+  }
+
+  .container__descrição {
+    padding: 0;
+  }
+
+  .secundario {
+    text-align: center;
+    margin: 2em;
+  }
+
+  .secundario__img {
+    width: 50vw;
+  }
+
+  .descricao__titulo {
+    font-size: 32px;
+  }
+
+  .dispositivos__titulo {
+    font-size: 32px;
+  }
+
+  .dispositivos__lista {
+    display: block;
+    font-size: 32px;
+  }
+  
+  .dispositivos__lista img {
+    width: 80vw;
+  }
+
+  .rodape__lista {
+    display: block;
+  }
+}
